Introduced timeout for import thru XSLTFilter. Fixes fdo#35543

This fixes only the "HANG" part of fdo#35543. The Excel2003ML import
 filter  remains broken.